Java 11 now required instead of Java 8 Web3J update to 4.0.3 Spring Boot update to 2.1.1 Solidity contracts update