@@ -4,13 +4,12 @@ import org.bouncycastle.jce.ECNamedCurveTable;
 import org.bouncycastle.jce.spec.ECParameterSpec;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import java.security.*;
 import java.security.spec.EncodedKeySpec;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 
 /** 
  * Key pair for ECDSA
@@ -60,9 +59,8 @@ public class ECDSAKeyPair {
     public static PublicKey getPublicKey(String publicKey) throws Exception {
     	try {
     		Security.addProvider(new org.bouncycastle.jce.provider.BouncyCastleProvider());
-			BASE64Decoder b64Decoder = new BASE64Decoder();
 			KeyFactory keyFactory = KeyFactory.getInstance("ECDSA", "BC");
-			EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(b64Decoder.decodeBuffer(publicKey));
+			EncodedKeySpec publicKeySpec = new X509EncodedKeySpec(Base64.getDecoder().decode(publicKey));
 			PublicKey key = keyFactory.generatePublic(publicKeySpec);
 			return key;
 		} catch (Exception e) {
@@ -76,8 +74,7 @@ public class ECDSAKeyPair {
 	 * @return key Encoded public key in string format
 	 */
     public String getEncodedPublicKey() {
-    	BASE64Encoder b64Encoder = new BASE64Encoder();
-		return b64Encoder.encode(publicKey.getEncoded());
+		return Base64.getEncoder().encodeToString(publicKey.getEncoded());
     }
 
     /**
@@ -97,9 +94,8 @@ public class ECDSAKeyPair {
     public static PrivateKey getPrivateKey(String privateKey) throws Exception {
     	try {
     		Security.addProvider(new org.bouncycastle.jce.provider.BouncyCastleProvider());
-			BASE64Decoder b64Decoder = new BASE64Decoder();
 			KeyFactory keyFactory = KeyFactory.getInstance("ECDSA", "BC");
-			EncodedKeySpec privateKeySpec = new PKCS8EncodedKeySpec(b64Decoder.decodeBuffer(privateKey));
+			EncodedKeySpec privateKeySpec = new PKCS8EncodedKeySpec(Base64.getDecoder().decode(privateKey));
 			PrivateKey key = keyFactory.generatePrivate(privateKeySpec);
 			return key;
 		} catch (Exception e) {
@@ -113,8 +109,7 @@ public class ECDSAKeyPair {
 	 * @return key Encoded private key in string format
 	 */
     public String getEncodedPrivateKey() {
-    	BASE64Encoder b64Encoder = new BASE64Encoder();
-		return b64Encoder.encode(privateKey.getEncoded());
+		return Base64.getEncoder().encodeToString(privateKey.getEncoded());
     }
 
     /**
